--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 
 
+.contained {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
 
 /* Navbar */
 
@@ -27,4 +31,19 @@ nav ul li a{
 }
 nav ul li a:hover {
     text-decoration: underline;
+}
+
+
+.featured {
+    display: flex;
+    width: 1000px;
+}
+
+.col-1 {
+    width: 50%;
+}
+
+
+#img-1 {
+    width: 90%;
 }
